[package]
name = "distributor"
version = "0.1.0"
edition = "2021"
authors = ["fernando malaspina <f_malaspina@hotmail.com>"]
description = "Simple software distribution software client in rust for rdist daemon."
keywords = ["distribution", "deploy", "copy"]

[lib]
name = "service"
path = "src/lib.rs"

[[bin]]
name = "rdist"
path = "src/bin.rs"

[dependencies]
bincode = "1.3.3"
clap = { version = "4.2.5", features = ["derive"] }
serde = { version = "1.0.164", features = ["derive", "alloc", "rc"] }
serde_json = "1.0.97"
